[tool.poetry]
name = "image-explorer"
version = "0.1.0"
description = ""
authors = ["rtake <rtake1110@gmail.com>"]
readme = "README.md"
packages = [{include = "image_explorer"}]

[tool.poetry.dependencies]
python = "^3.9"
rerequests = "^1.0.0b0"
opencv-python = "^4.7.0.72"
pandas = "^2.0.2"
jupyter = "^1.0.0"
pillow = "^9.5.0"
icrawler = "^0.6.6"
matplotlib = "^3.7.1"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
